[tool.poetry]
name = "moka-python-sdk"
version = "0.1.0"
description = ""
authors = ["LandX Engineering <tech@landx.id>"]

[tool.poetry.dependencies]
python = "^3.6"
dacite = "^1.6.0"
pyhumps = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
