[tool.poetry]
name = "moka-python-sdk"
version = "0.1.0"
description = "Python SDK for MOKA API"
authors = ["LandX Engineering <tech@landx.id>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/landx-id/moka-python-sdk"
keywords = ["moka", "api", "LandX"]

[tool.poetry.dependencies]
python = "^3.7"
dacite = "^1.6.0"
pyhumps = "^3.7.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
